made the taskdetails in client section show everything and updated SAR to BHD

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -181,13 +181,18 @@
 },
 
   "clientTaskDetails": {
-    "description": "الوصف",
-    "address": "العنوان",
-    "offeredPrice": "السعر المعروض",
-    "editTask": "تعديل المهمة",
-    "viewBids": "عرض العروض",
-    "cancelTask": "إلغاء المهمة"
-  },
+  "description": "الوصف",
+  "address": "العنوان",
+  "offeredPrice": "السعر المعروض",
+  "editTask": "تعديل المهمة",
+  "viewBids": "عرض العروض",
+  "cancelTask": "إلغاء المهمة",
+  "category": "الفئة",
+  "status": "الحالة",
+  "createdAt": "تاريخ الإنشاء",
+  "bidCount": "عدد العروض",
+  "notProvided": "لم يتم التقديم"
+},
   "clientViewBids": {
     "title": "العروض المستلمة",
     "chat": "محادثة",
