made view details in the tasker side much smoother

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -334,7 +334,9 @@
   "editYourBid": "تعديل عرضك",
 "updateBid": "تحديث العرض",
 "submitting": "جارٍ الإرسال...",
-"status": "حالة العرض"
+"status": "حالة العرض",
+ "loadingBid": "جاري تحميل عرض السعر الخاص بك...",
+  "loadingBidMessage": "يرجى الانتظار أثناء تحميل تفاصيل عرضك."
 
 }
 
