added popup loading to reviews also

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -207,6 +207,16 @@
     "acceptingBid": "جاري القبول..."
 
   },
+"clientReview": {
+  "title": "قيّم المزود",
+  "commentPlaceholder": "اكتب تعليقاً...",
+  "submit": "إرسال التقييم",
+  "submitting": "جارٍ إرسال التقييم..."
+},
+
+
+
+
 
 
 
