--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -1,5 +1,8 @@
 {
-  "welcome": ".مساعدة موثوقة، على بُعد مهمة واحدة فقط",
+ "tagline": {
+    "main": "مساعدة موثوقة",
+    "sub": "مهمة واحدة فقط بعيدًا"
+  },
 "chooseRole": "اختر دورك:",
 "role": {
   "client": "عميل",
