UI/UX reg screen

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -40,9 +40,9 @@
     "phone": "رقم الجوال",
     "missingFields": "معلومات ناقصة",
   "fillAllFields": "يرجى ملء جميع الحقول.",
- "accept": "أوافق على",
-  "privacy": "سياسة الخصوصية",
+ "termsText": "من خلال التسجيل، أنت توافق على",
   "terms": "الشروط والأحكام",
+  "privacy": "سياسة الخصوصية",
   "and": "و",
   "termsRequiredTitle": "الموافقة مطلوبة",
   "termsRequiredMessage": "يجب الموافقة على الشروط وسياسة الخصوصية للمتابعة."
