UI/UX client posttask screen

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -163,7 +163,7 @@
     "enterAddress": "أدخل العنوان أو الموقع",
     "budget": "أدخل ميزانيتك",
     "uploadImage": "رفع صورة",
-    "postBtn": "نشر المهمة",
+    "postBtn": "نشر المهمة +",
     "cancel": "إلغاء",
     "limitTitle": "تم الوصول للحد الأقصى",
     "limitMsg": "يمكنك تحميل 3 صور كحد أقصى.",
