--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -317,7 +317,9 @@
   "taskerReviews": {
     "title": "My Reviews",
     "average": "Average Rating",
-    "empty": "You have not received any reviews yet."
+    "empty": "You have not received any reviews yet.",
+    "averageText": "Your average rating: {{rating}} ⭐"
+
   },
   "taskerMyTasks": {
   "status": "Status",
