UI/UX Client Explore Screen

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -299,7 +299,9 @@
     "price": "السعر",
     "bids": "العروض",
     "viewDetails": "عرض التفاصيل",
-    "noTasks": "لا توجد مهام متاحة حاليًا."
+    "noTasks": "لا توجد مهام متاحة حاليًا.",
+    "greeting": "مرحباً {{name}}،",
+    "subGreeting": "ابحث عن مهمتك القادمة وابدأ في الكسب!"
   },
   "taskerMessages": {
     "title": "الرسائل"
